samples/_failures_safe/1761562307_99596c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_049230fe.c: In function ‘main’:
./samples/SAFE/__tmp_049230fe.c:144:13: error: expected identifier or ‘(’ at end of input
  144 |             int
      |             ^~~
./samples/SAFE/__tmp_049230fe.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_049230fe.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_049230fe.c:144:13: error: expected declaration or statement at end of input
